--- a/tex/appendix.tex
+++ b/tex/appendix.tex
@@ -373,7 +373,7 @@ Nous voulons l'exprimer dans la base $D_{O}$. $w_{x}$, $w_{y}$ et $w_{z}$ sont c
 
 Nous avons ainsi montré l'équivalence des deux vecturs spatiaux $\widehat{v}$ et $\widehat{v'}$.
 
-\subsection{invariance entre deux bases de \emph{Plücker} quelconques}
+\subsection{invariance entre deux bases de \emph{Plücker} quelconques et relation avec }
 
 
 \chapter{\textsc{é}léments d'algèbre linéaire} \label{appx_algLineaire}
