--- a/tex/bib.tex
+++ b/tex/bib.tex
@@ -78,7 +78,7 @@
 
 %\bibitem{bib_complexiteInversionMatriceDirecte}
 %  SUR L'INVERSION DE MATRICE,
-  J.B Lasserre,
+%  J.B Lasserre,
 %  http://archive.numdam.org/ARCHIVE/RO/RO_1992__26_2/RO_1992__26_2_177_0/RO_1992__26_2_177_0.pdf
 
 \bibitem{bib_deepFirstSearch}
