--- a/tex/glossaire.tex
+++ b/tex/glossaire.tex
@@ -50,3 +50,5 @@
 \newglossdef{gls_stackOfTasks}{STack Of Tasks}{Gestionnaire de l'ensemble des tâches de la plateforme robotique.}
 
 \newglossdef{gls_algoDFS}{Deep First Search}{Algorithme parcourant un arbre en profondeur d'abord.}
+
+\newglossdef{gls_sparsite}{sparsité}{une matrice est dite \emph{sparse} si elle est creuse, c'est à dire si elle contient un nombre important de termes nuls. La même notion existe pour une fonction. Une fonction $f$ est dite \emph{sparse} si pour un vecteur de variables $X$, très peu de variables de ce vecteur déterminent le résultat de $f(X)$.}
